# drawcat

./: .gitignore  LICENSE  README.md  config.example.json  drawcat.py  pyproject.toml  requirements.txt
defense/: __init__.py  cookie_security.py  input_filter.py  param_query.py  waf.py
reporter/: __init__.py  report_generator.py
scanner/: __init__.py  crawler.py  payloads.py  scanner.py  sql_injection.py  xss.py
scanner/payloads/: db_errors.json  sqli.json  xss.json
testbed/: app.py  app_secure.py
testbed/templates/: index.html  login.html
tests/: test_defense.py  test_scanner.py
