[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drawcat"
version = "1.0.0"
description = "Automated Web Vulnerability Scanner — SQLi & XSS detection with AI report"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Drawcat"}]
keywords = ["security", "scanner", "sqli", "xss", "web-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "jinja2>=3.1.0",
    "urllib3>=1.26.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
ai = ["anthropic>=0.30.0"]
testbed = ["flask>=2.3.0", "werkzeug>=2.3.0"]
full = ["anthropic>=0.30.0", "flask>=2.3.0", "werkzeug>=2.3.0"]

[project.scripts]
drawcat = "drawcat:main"

[tool.setuptools]
packages = ["scanner", "reporter", "testbed", "defense"]
py-modules = ["drawcat"]
